--- a/class-js/div-color/style.css
+++ b/class-js/div-color/style.css
@@ -8,6 +8,7 @@
   width: 200px;
   height: 200px;
   margin: 30px;
+  transition: all 0.5s;
 }
 
 .color {
@@ -22,4 +23,8 @@
   border-radius: 5px;
   border: none;
   margin: 10px;
+}
+
+.right {
+  margin-left: 50%;
 }
